              returns by const reference instead of const pointer.
              Also, buildLinkDetail() has been renamed buildLinkInclusion();
              the old name is removed entirely.  This now returns just an
              isomorphism by value: the triangulation should be fetched via
              buildLink(), and the labelling option is gone.
        Class FaceEmbedding<dim, subdim>:
            - Local copies of these objects can now happily outlive their
              underlying faces.  This is because they now carry their entire
              embedding permutations with them.  This change actually shrinks
              the object size in Regina's standard dimensions, and it also
              speeds up calls to vertices(), but it does marginally slow
              down calls to face().
            - The equality/inequality tests have changed meaning: not only do
              the face *numbers* need to be the same, but the entire embedding
              permutations returned by vertices() need to be the same.
            - The old (simplex, face number) constructors are removed, with new
              (simplex, embedding permutation) constructors to replace them.
        Class FaceNumbering<dim, subdim>:
            - Everything in this class is now constexpr.
            - New class constants lexNumbering and oppositeDim.
            - Simplified the underlying web of template specialisations.
        Class FacePair:
            - New routines commonEdge() and oppositeEdge().
            - Increment/decrement operators now insist that the face
              pair is not past-the-end/before-the-start respectively.
        Class FacetPairing<dim>, FacetPairingBase<dim>:
            - Added a copy assignment operator.
            - Added move constructors and move assignment operators.
            - Added member swap(), and for FacetPairing<dim> a global swap().
            - Function fromTextRep() now returns by value (not pointer), and