@@ -61,16 +61,9 @@ void addEdge2(pybind11::module_& m) {
         .def("hasBadIdentification", &Edge<2>::hasBadIdentification)
         .def("hasBadLink", &Edge<2>::hasBadLink)
         .def("isLinkOrientable", &Edge<2>::isLinkOrientable)
-        // Make all embeddings functions return by value in Python, since
-        // embeddings are lightweight and we wish to enforce constness.
-        .def("embeddings", [](const Edge<2>& e) {
-            pybind11::list ans;
-            for (const auto& emb : e)
-                ans.append(emb);
-            return ans;
-        })
         .def("degree", &Edge<2>::degree)
         .def("embedding", &Edge<2>::embedding)
+        .def("embeddings", &Edge<2>::embeddings)
         .def("front", &Edge<2>::front)
         .def("back", &Edge<2>::back)
         .def("triangulation", &Edge<2>::triangulation)
