@@ -63,15 +63,8 @@ void addEdge3(pybind11::module_& m) {
 
     auto c = pybind11::class_<Face<3, 1>>(m, "Face3_1")
         .def("index", &Edge<3>::index)
-        // Make all embeddings functions return by value in Python, since
-        // embeddings are lightweight and we wish to enforce constness.
-        .def("embeddings", [](const Edge<3>& e) {
-            pybind11::list ans;
-            for (const auto& emb : e)
-                ans.append(emb);
-            return ans;
-        })
         .def("embedding", &Edge<3>::embedding)
+        .def("embeddings", &Edge<3>::embeddings)
         .def("front", &Edge<3>::front)
         .def("back", &Edge<3>::back)
         .def("triangulation", &Edge<3>::triangulation)
